tests/snapshots/heuristic/q09.snap
---
source: tests/explain_snapshots.rs
description: "-- comma-join with single-relation filters on BOTH sides (pushdown bait)\nSELECT c_name, o_orderdate\nFROM customer, orders\nWHERE c_custkey = o_custkey\n  AND c_mktsegment = 'MACHINERY'\n  AND o_orderstatus = 'F'"
expression: rendered
---
Project [#0.1, #1.4]
  Join on=[#0.0 = #1.1]
    Filter (#0.3 = 'MACHINERY')
      Project [#0.0, #0.1, #0.3]
        Scan #0
    Filter (#1.2 = 'F')
      Project [#1.1, #1.2, #1.4]
        Scan #1
