tests/snapshots/heuristic/q11.snap
---
source: tests/explain_snapshots.rs
description: "-- 3-way comma-join, biggest table listed first (bad textual order)\nSELECT c_name, o_orderkey, l_quantity\nFROM lineitem, customer, orders\nWHERE c_custkey = o_custkey\n  AND o_orderkey = l_orderkey\n  AND c_nationkey = 3"
expression: rendered
---
Project [#1.1, #2.0, #0.3]
  Join on=[#1.0 = #2.1, #0.0 = #2.0]
    Join on=[]
      Project [#0.0, #0.3]
        Scan #0
      Filter (#1.2 = 3)
        Project [#1.0, #1.1, #1.2]
          Scan #1
    Project [#2.0, #2.1]
      Scan #2
